2025.233:
	- Add ms_nstime2timestr_n() with string size limit, deprecate ms_nstime2timestr().

2025.227:
	- Properly round negative values when converting floats to integers
	in mstl3_convertsamples().

2025.207: 3.1.6
	- Properly propagate sub-fractional microseconds to v2 blockette 1001
	when packing more than one record.
	- Round sub-fractional and sub-microsecond times for v2 record fields
	to retain accuracy.
	- Ensure microsecond offsets in v2 record fields are -50 to +49, which
	matches previous major library version behavior and SEED recommendation.
	- Add msr3_repack_mseed2() to repack v2 records efficiently.
	- Add -s and -R options to example/lm_pack.c.
	- Fix some pedantic compiler warnings in msio.c.

2025.114: 3.1.5
	- Add new functions to libmseed.map and libmseed.def for public use.

2025.113: 3.1.4
	- Fix msr3_duplicate() to properly terminate duplicated extra headers.
	- Add mstraceseg3_pack() to individually packet MS3TraceSeg entries.
	- Add lmp_systemtime() to return current system time as nstime_t.
	- Add MS3Record_INITIALIZER for efficient heap initialization of an MS3Record.
	- Change the default initialization for MS3Record.starttime to NSTUNSET.
	Previously this was a value of 0, corresponding to 1970-01-01T00:00:00Z.
	- msr3_print(): do not force high resolution printing of sample rate.
	- Add MSF_PPUPDATETIME flag to store update time (as nstime_t) at MS3TraceSeg.prvtptr.
	- Add support for generating SourceIDs from SEED codes with (illegal) spaces.
	- Add ms_sid2nslc_n() with destination buffer sizes for memory safety.
	- Deprecate ms_sid2nslc(), supports max buffers needed for SEED codes.
	- Fix some potential undefined behavior due to load of unaligned values.

2024.165: 3.1.3
	- Use sequence number from extra headers (/FDSN/Sequence) if present when writing format v2.

2024.148: 3.1.2
	- Update yyjson to v0.9.0.
	- Simplify mstl3_addmsr_recordptr() a bit.

2024.146: